Add project pages

--- a/projects.html
+++ b/projects.html
@@ -39,239 +39,239 @@
 
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
-                <img src="images/sphere.jpg">
-                <a href="">
+                <img src="images/anglebias.jpg">
+                <a href="projects/mcscatter.html">
                   <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
                 </a>
               </div>
               <div class="card-body border-secondary">
                 <h2 class="card-title">Gamma Ray Monte Carlo</h2>
-                <p class="card-text">A framework for simulated photoelectric absorption and scattering of high-energy light. I used this to account for geometric factors in an experiment to measure the Compton wavelength shift.</p>
-                <a href="projects/mcscatter.html" class="btn btn-outline-secondary">View</a>
+                <p class="card-text">A framework for simulated photoelectric absorption and scattering of high-energy light in 3D geometries. I used this to account for geometric factors in an experiment to measure the Compton wavelength shift.</p>
+                <a href="projects/mcscatter.html" class="btn btn-outline-secondary">Read more</a>
               </div>
             </div>
 
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
                 <img src="images/k1=k2=k3.png">
-                <a href="">
+                <a href="projects/bz.html">
                   <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
                 </a>
               </div>
               <div class="card-body border-secondary">
                 <h2 class="card-title">Belousov Zhabotinsky Automaton</h2>
                 <p class="card-text">Math and modeling for a course in partial differential equations. Here I examined a model of a chemical reaction that makes waves!</p>
-                <a href="" class="btn btn-outline-secondary">View</a>
+                <a href="projects/bz.html" class="btn btn-outline-secondary">Read more</a>
               </div>
             </div>
 
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
                 <img src="images/sphere.jpg" class="img-fluid"/>
-                <a href="">
+                <a href="projects/mov-battery.html">
                   <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
                 </a>
               </div>
               <div class="card-body border-secondary">
                 <h2 class="card-title">SEV G█████ Battery</h2>
                 <p class="card-text">Thermal and mechanical design of a new, bigger battery for MIT Solar Car's next vehicle.</p>
-                <a href="" class="btn btn-outline-secondary">Coming soon!</a>
+                <a href="projects/mov-battery.html" class="btn btn-outline-secondary">Coming soon!</a>
               </div>
             </div>
 
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
                 <img src="images/sampling.jpg" class="img-fluid"/>
-                <a href="">
+                <a href="projects/ligo.html">
                   <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
                 </a>
               </div>
               <div class="card-body border-secondary">
                 <h2 class="card-title">LIGO Gravitational Waves</h2>
                 <p class="card-text">Signal processing and analysis of the legendary black hole merger signal.</p>
-                <a href="" class="btn btn-outline-secondary">View</a>
+                <a href="projects/ligo.html" class="btn btn-outline-secondary">Read more</a>
               </div>
             </div>
 
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
                 <img src="images/hinges.jpg" class="img-fluid"/>
-                <a href="">
+                <a href="projects/nimbus.html">
                   <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
                 </a>
               </div>
               <div class="card-body border-secondary">
                 <h2 class="card-title">SEV Nimbus Canopy Mechanisms</h2>
                 <p class="card-text">Latching and hinging of the driver bubble canopy for MIT Solar Car's Nimbus, winner of the 2021 American Solar Challenge.</p>
-                <a href="" class="btn btn-outline-secondary">View</a>
+                <a href="projects/nimbus.html" class="btn btn-outline-secondary">Read more</a>
               </div>
             </div>
 
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
-                <img src="images/charger.jpg" class="img-fluid"/>
-                <a href="">
+                <img src="images/mpptcased.jpg" class="img-fluid"/>
+                <a href="projects/mppt.html">
                   <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
                 </a>
               </div>
               <div class="card-body border-secondary">
                 <h2 class="card-title">MPPT Solar Charge Controller</h2>
-                <p class="card-text">A pile of electronics that currently charges my family's mobile devices, but which can charge batteries too, using a decommissioned solar panel.</p>
-                <a href="" class="btn btn-outline-secondary">View</a>
+                <p class="card-text">A pile of electronics with 240W designed capacity operating on a decommissioned solar panel.</p>
+                <a href="projects/mppt.html" class="btn btn-outline-secondary">Read more</a>
               </div>
             </div>
 
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
                 <img src="images/bubble.jpg" class="img-fluid"/>
-                <a href="">
+                <a href="projects/lattices.html">
                   <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
                 </a>
               </div>
               <div class="card-body border-secondary">
                 <h2 class="card-title">Python/Rust Lattice Simulated Annealing</h2>
                 <p class="card-text">First hacked together to solve an exam problem in my statmech class, this code simulates how crystal structures form to minimize energy.</p>
-                <a href="" class="btn btn-outline-secondary">View</a>
+                <a href="projects/lattices.html" class="btn btn-outline-secondary">Read more</a>
               </div>
             </div>
 
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
                 <img src="images/all_lessdense_alt.jpg" class="img-fluid"/>
-                <a href="">
+                <a href="projects/shattchar.html">
                   <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
                 </a>
               </div>
               <div class="card-body border-secondary">
                 <h2 class="card-title">Feature-Sparse 3D Reconstruction</h2>
                 <p class="card-text">In order to study <a href="#">shattering deuterium neon</a> pellets, I needed some tools. With synchronized high-speed cameras, I attempted to localize and estimate sizes in a cloud of fragments.</p>
-                <a href="" class="btn btn-outline-secondary">View</a>
+                <a href="projects/shattchar.html" class="btn btn-outline-secondary">Read more</a>
               </div>
             </div>
 
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
                 <img src="images/centerlamb0p04.png" class="img-fluid"/>
-                <a href="">
+                <a href="projects/stability.html">
                   <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
                 </a>
               </div>
               <div class="card-body border-secondary">
                 <h2 class="card-title">PDE Numerical Stability</h2>
                 <p class="card-text">A brief study of when a handful of finite difference schemes for solving partial differential equations break down.</p>
-                <a href="" class="btn btn-outline-secondary">View</a>
+                <a href="projects/stability.html" class="btn btn-outline-secondary">Read more</a>
               </div>
             </div>
 
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
                 <img src="images/windowlamp.jpg" class="img-fluid"/>
-                <a href="">
+                <a href="projects/window.html">
                   <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
                 </a>
               </div>
               <div class="card-body border-secondary">
                 <h2 class="card-title">IoT Flat Panel Lamp</h2>
                 <p class="card-text">I had an idea to turn the optics of a computer screen's backlight into a lamp. My roommates naturally decided to make it into an IoT device.</p>
-                <a href="" class="btn btn-outline-secondary">View</a>
+                <a href="projects/window.html" class="btn btn-outline-secondary">Read more</a>
               </div>
             </div>
 
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
                 <img src="images/trebuchet.jpg" class="img-fluid"/>
-                <a href="">
+                <a href="projects/trebuchet.html">
                   <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
                 </a>
               </div>
               <div class="card-body border-secondary">
                 <h2 class="card-title">MIT 8.223 <br> Trebuchet</h2>
                 <p class="card-text">For the final project in an analytical mechanics class, a friend and I put together a trebuchet which, lamentably, does not throw 90kg stones 300m.</p>
-                <a href="" class="btn btn-outline-secondary">View</a>
+                <a href="projects/trebuchet.html" class="btn btn-outline-secondary">Read more</a>
               </div>
             </div>
 
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
                 <img src="images/osc.jpg" class="img-fluid"/>
-                <a href="">
+                <a href="projects/doorbell.html">
                   <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
                 </a>
               </div>
               <div class="card-body border-secondary">
                 <h2 class="card-title">tEp Subwoofer Doorbell Oscillator</h2>
                 <p class="card-text">See that function generator that continuously draws 40W for my co-op's doorbell? It's getting replaced with this cardboard box on top.</p>
-                <a href="" class="btn btn-outline-secondary">View</a>
+                <a href="projects/doorbell.html" class="btn btn-outline-secondary">Read more</a>
               </div>
             </div>
 
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
                 <img src="images/countmigone.jpg" class="img-fluid"/>
-                <a href="">
+                <a href="projects/countmigone.html">
                   <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
                 </a>
               </div>
               <div class="card-body border-secondary">
                 <h2 class="card-title">Discord Counting Channel Bot</h2>
                 <p class="card-text">To document the emergent phenomenon of people in Discord channels deciding to spontaneously send messages counting up, I built a bot to track peoples' counting and display analytics.</p>
-                <a href="" class="btn btn-outline-secondary">View</a>
+                <a href="projects/countmigone.html" class="btn btn-outline-secondary">Read more</a>
               </div>
             </div>
 
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
                 <img src="images/captrac.jpg" class="img-fluid"/>
-                <a href="">
+                <a href="projects/captrac.html">
                   <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
                 </a>
               </div>
               <div class="card-body border-secondary">
                 <h2 class="card-title">AP Government Cap Tracker</h2>
                 <p class="card-text">Google Sheets is not a backend. Google Sheets is not a backend. Google Sheets is not a backend.</p>
-                <a href="" class="btn btn-outline-secondary">View</a>
+                <a href="projects/captrac.html" class="btn btn-outline-secondary">Read more</a>
               </div>
             </div>
 
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
                 <img src="images/Pendulum.png" class="img-fluid"/>
-                <a href="">
+                <a href="projects/rungekutta.html">
                   <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
                 </a>
               </div>
               <div class="card-body border-secondary">
                 <h2 class="card-title">C++ Runge-Kutta Library</h2>
                 <p class="card-text">Does RK4 given a system of differential equations. I don't remember what inspired me to implement this in high school, but it's been useful a few times since.</p>
-                <a href="" class="btn btn-outline-secondary">View</a>
+                <a href="projects/rungekutta.html" class="btn btn-outline-secondary">Read more</a>
               </div>
             </div>
 
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
                 <img src="images/bread.jpg" class="img-fluid"/>
-                <a href="">
+                <a href="projects/breads.html">
                   <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
                 </a>
               </div>
               <div class="card-body border-secondary">
                 <h2 class="card-title">Experimental Breads</h2>
                 <p class="card-text">Pretty much exactly what you'd expect. A catalog of some of my breads.</p>
-                <a href="" class="btn btn-outline-secondary">View</a>
+                <a href="projects/breads.html" class="btn btn-outline-secondary">Read more</a>
               </div>
             </div>
 
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
                 <img src="images/disco.jpg" class="img-fluid"/>
-                <a href="">
+                <a href="projects/discovery.html">
                   <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
                 </a>
               </div>
               <div class="card-body border-secondary">
                 <h2 class="card-title">FRC Robot Chassis</h2>
                 <p class="card-text">I designed things for my high school robotics team.</p>
-                <a href="" class="btn btn-outline-secondary">View</a>
+                <a href="projects/discovery.html" class="btn btn-outline-secondary">Read more</a>
               </div>
             </div>
 
