Add project content

--- a/projects.html
+++ b/projects.html
@@ -263,7 +263,7 @@
 
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
-                <img src="images/disco.jpg" class="img-fluid"/>
+                <img src="images/robots.jpg" class="img-fluid"/>
                 <a href="projects/discovery.html">
                   <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
                 </a>
