--- a/projects/discovery.html
+++ b/projects/discovery.html
@@ -28,12 +28,20 @@
     <div class="spacer"></div>
     <div id="box1">
         <h1>discovery chassis</h1>
-        <p>
+        <p>A base for my high school robotics team's second robot, Discovery.
         </p>
     </div>
 
     <div id="box3">
-        <p></p>
+        <p>Some figures of merit for FRC robot chassis are low center of gravity,
+        good manufacturability, and decent stiffness. The design sought to achieve
+        these, keeping in mind that our machining capabilities were quite limited.</p>
+        <p>I opted for a simple frame made of 1" aluminum box tubing, which could be
+        easily bolted together, and would accommodate our independently-steered (swerve)
+        wheel modules. Simple FEA study showed displacement under expected load
+        was minimal.
+        </p>
+        <p>It worked pretty well, and that's about it.</p>
     </div>
 
 </body>
