--- a/projects/ligo.html
+++ b/projects/ligo.html
@@ -28,13 +28,31 @@
     <div class="spacer"></div>
     <div id="box1">
         <h1>LIGO data analysis</h1>
-        <p>Cell
+        <p>black holes stretching space go brrrr
         </p>
         <h3><a href="">Presentation</a>  |  <a href="">8.s50</a>
     </div>
 
     <div id="box3">
-        <p></p>
+        <p>For MIT's winter term course 8.S50 (the inaugural term of 8.16 Data Science in Physics)
+        I had the opportunity to tackle 3 projects using open data (LIGO, CERN, and simulated CMB).
+        I thought this one, with the LIGO data, was the coolest: from a horrifying mess of noise in strain data from a hyper-sensitive
+        interferometer, identify the echoes of black holes merging millions of years ago.
+        </p>
+        <p>Wait, what? If you know nothing about astrophysics, maybe that sounds a bit weird, so let me explain.
+        One of the predictions of general relativity is that accelerating masses should produce waves
+        that can be thought of as distorting spacetime (as gravity can be thought of as spacetime curvature).
+        In theory, this squishing and stretching of space can be measured. In practice this is done using an interferometer.
+        In fact, a geographically separated pair of very big and precise ones, using squeezed light to reduce
+        noise below the typical quantum limit. Over the kilometers-long interferometer arms of LIGO, the distortions
+        lead to path length changes on the atomic scale.
+        </p>
+        <p>There's all sorts of other clever engineering that went into the LIGO experiment, but that's
+        not for me to explain. The takeaway of this is that these instruments are insanely sensitive
+        to... everything. And so even with exceptional isolation, the output signals are very noisy.
+        My project for the class was to find the gravitational wave.
+        </p>
+        <p><i>to be continued...</i></p>
     </div>
 
 </body>
