--- a/projects/nimbus.html
+++ b/projects/nimbus.html
@@ -28,10 +28,12 @@
     <div class="spacer"></div>
     <div id="box1">
         <h1>nimbus canopy</h1>
+        <p>Goal: prevent the solar car driver from flying away while driving</p>
     </div>
 
     <div id="box3">
-        <p></p>
+        <p><i>To be continued when I have time to write...</i>
+        </p>
     </div>
 
 </body>
