--- a/projects/shattchar.html
+++ b/projects/shattchar.html
@@ -28,11 +28,13 @@
     <div class="spacer"></div>
     <div id="box1">
         <h1>shatter characterization</h1>
-        <p></p>
+        <p>How do you figure out the motion and size of fragments of "ice" that look very similar?
+        </p>
     </div>
 
     <div id="box3">
-        <p></p>
+        <p><i>To be continued when I have time to write...</i>
+        </p>
     </div>
 
 </body>
