--- a/projects/stability.html
+++ b/projects/stability.html
@@ -28,13 +28,14 @@
     <div class="spacer"></div>
     <div id="box1">
         <h1>stability</h1>
-        <p>Cell
+        <p>Some schemes for integrating partial differential equations are not good. Here's proof.
         </p>
         <h3><a href="https://github.com/Certaingemstone/reactdiff">Git repo</a>  |
     </div>
 
     <div id="box3">
-        <p></p>
+        <p><i>To be continued when I have time to write...</i>
+        </p>
     </div>
 
 </body>
