--- a/projects/trebuchet.html
+++ b/projects/trebuchet.html
@@ -28,13 +28,14 @@
     <div class="spacer"></div>
     <div id="box1">
         <h1>trebuchet</h1>
-        <p>
+        <p>My roommate and I built a trebuchet. What more can I say?
         </p>
-        <h3><a href="">Video</a>  |
+        <h3><a href="https://youtu.be/hsaz-GCAmjg">Video</a>  |
     </div>
 
     <div id="box3">
-        <p>?</p>
+        <p>Evidently, not much yet. <i>To be continued when I have time to write...</i>
+        </p>
     </div>
 
 </body>
