--- a/projects/mov-battery.html
+++ b/projects/mov-battery.html
@@ -28,13 +28,14 @@
     <div class="spacer"></div>
     <div id="box1">
         <h1>mov battery</h1>
-        <p>Cell
+        <p>An ambitious new solar vehicle touches the pavement. With it, comes a new battery design.
         </p>
         <h3><a href="">Writeup</a>  |  <a href="">SEVT</a>
     </div>
 
     <div id="box3">
-        <p></p>
+        <p><i>To be continued when I have time to write...</i>
+        </p>
     </div>
 
 </body>
