--- a/projects/rungekutta.html
+++ b/projects/rungekutta.html
@@ -28,13 +28,14 @@
     <div class="spacer"></div>
     <div id="box1">
         <h1>RK4 library</h1>
-        <p>Cell
+        <p>It's simple. It's pretty fast. It gets the differential-equation job done.
         </p>
         <h3><a href="https://github.com/Certaingemstone/SimpleRK4">Git repo</a>  |
     </div>
 
     <div id="box3">
-        <p></p>
+        <p><i>To be continued when I have time to write...</i>
+        </p>
     </div>
 
 </body>
