--- a/projects/window.html
+++ b/projects/window.html
@@ -28,13 +28,13 @@
     <div class="spacer"></div>
     <div id="box1">
         <h1>window</h1>
-        <p>
+        <p>An aesthetically pleasing fake-window style light, built from a broken monitor. At one point tracked the price of bitcoin.
         </p>
-        <h3><a href="https://github.com/Certaingemstone/SolChgCtrl">Git repo</a>  |  <a href="">Schematic</a>
     </div>
 
     <div id="box3">
-        <p></p>
+        <p><i>To be continued when I have time to write.</i>
+        </p>
     </div>
 
 </body>
